[gd_scene load_steps=9 format=2]

[ext_resource path="res://Escenes/ParticulesFiMinijoc.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scripts/MinijocCafeAmbLlet.gd" type="Script" id=2]
[ext_resource path="res://Imatges/TassaCafeLlet.png" type="Texture" id=3]
[ext_resource path="res://Imatges/GerraLlet.png" type="Texture" id=4]
[ext_resource path="res://Imatges/Fletxa.png" type="Texture" id=5]
[ext_resource path="res://Imatges/Cafe.png" type="Texture" id=6]
[ext_resource path="res://Imatges/TassaCafeLletFOREGROUND.png" type="Texture" id=7]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 502.5, 610 )

[node name="MinijocCafeAmbLlet" type="Node2D"]
script = ExtResource( 2 )
__meta__ = {
"_edit_lock_": true
}
cabal = 10.0

[node name="GerraLlet" type="Sprite" parent="."]
position = Vector2( 272, 9 )
scale = Vector2( 0.2, 0.2 )
z_index = 3
texture = ExtResource( 4 )
__meta__ = {
"_edit_lock_": true
}

[node name="StaticBody Gerra" type="StaticBody2D" parent="GerraLlet"]
input_pickable = true

[node name="RectangleGerra" type="CollisionShape2D" parent="GerraLlet/StaticBody Gerra"]
position = Vector2( -352.5, 5.00004 )
scale = Vector2( 1, 1 )
shape = SubResource( 1 )

[node name="Fletxa" type="Sprite" parent="."]
position = Vector2( -195, 69 )
scale = Vector2( 0.15, 0.15 )
z_index = 3
texture = ExtResource( 5 )
__meta__ = {
"_edit_lock_": true
}

[node name="cafe" type="Sprite" parent="."]
position = Vector2( -90, 150 )
scale = Vector2( 0.15, 0.15 )
z_index = 2
texture = ExtResource( 6 )
region_rect = Rect2( 0, 0, 64, 140 )

[node name="Fons" type="Sprite" parent="."]
texture = ExtResource( 3 )
__meta__ = {
"_edit_lock_": true
}

[node name="TassaCafeLletForeground" type="Sprite" parent="Fons"]
z_index = 2
texture = ExtResource( 7 )

[node name="ParticulesFiMinijoc" parent="." instance=ExtResource( 1 )]
z_index = 6

[connection signal="input_event" from="GerraLlet/StaticBody Gerra" to="." method="_on_StaticBody_Gerra_input_event"]
